discussion/kv_engine/171651/171651_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test commit for kv_engine/neo branch

Change-Id: I025e7f2f59251b57bcc86d3a82be2e9488449537

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-03-02 11:46:40.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-02 12:28:39.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/44]: delete with meta...Uncaught std::exception. what():cb::io::rmrf: remove of directory \\?\C:\Jenkins\workspace\kv_engine-windows-neo\build\kv_engine\engines\ep\tests\ep_testsuite_xdcr.full_eviction.comp_passive.db failed: unknown error
(271 ms) DIED
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14727/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-02 14:59:13.000000000
Message: 
Patch Set 1: Verified+1 -Code-Review

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14730/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/2/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/2/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-02 16:10:32.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/6/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/6/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14736/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/6/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-03 11:54:48.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14736/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/6/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/7/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-03 17:34:46.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
